test/files/neg/t12879/Test.scala
//> using options -deprecation -Werror
class C {
  val x: A = A.Foo
  val y: A = A.Bar
}
